# agents

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  CONTRIBUTING.md  Cargo.toml  DockerHub.md  Dockerfile  Migrant.toml  README.md  RELEASING.md  ROADMAP.md  agent-mongodb.example.yaml  agent-zookeeper.example.yaml  agent.example.yaml  replidev.yaml
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  other.md
.github/workflows/: rust-checks-nightly.yaml  rust-checks.yaml  rust-deps-audit.yaml
agents/: agent.example.yaml
agents/kafka/: CHANGELOG.md  Cargo.toml  DockerHub.md  Dockerfile  README.md  agent-kafka.example.yaml  agent-kafka.yaml
agents/kafka/src/: config.rs  lib.rs  main.rs  metrics.rs
agents/kafka/src/agent/: jmx.rs  mod.rs  zk.rs
agents/mongodb/: CHANGELOG.md  Cargo.toml  agent-mongodb.example.yaml  agent-mongodb.yaml
agents/mongodb/src/: config.rs  error.rs  lib.rs  main.rs
agents/mongodb/src/actions/: graceful_stop.rs  mod.rs
agents/mongodb/src/version/: mod.rs
agents/mongodb/src/version/v3_0/: mod.rs  models.rs  replica.rs
agents/mongodb/src/version/v3_2/: common.rs  mod.rs  models.rs  replica.rs  sharded.rs
agents/zookeeper/: CHANGELOG.md  Cargo.toml  agent-zookeeper.yaml
agents/zookeeper/src/: agent.rs  config.rs  lib.rs  main.rs  metrics.rs
agents/zookeeper/src/zk4lw/: srvr.rs
base/: CHANGELOG.md  Cargo.toml  Changelog.md  agent.example.yaml
base/src/: config.rs  context.rs  error.rs  errors.rs  lib.rs  metrics.rs  models.rs  process.rs  runner.rs  traits.rs  versioned.rs
base/src/actions/: debug.rs  definition.rs  engine.rs  mod.rs  register.rs  tests.rs  utils.rs
base/src/actions/actions_api/: action.rs  list.rs  mod.rs  schedule.rs
base/src/actions/advanced/: and_then.rs  mod.rs  no_op.rs
base/src/actions/engine/: mod.rs  tests.rs
base/src/actions/impls/: debug.rs  mod.rs
base/src/actions/impls/service/: composed.rs  mod.rs  supervisor.rs
base/src/api/: handler_info.rs  handler_metrics.rs  handler_status.rs  index.rs  info.rs  metrics.rs  mod.rs  roots.rs  shards.rs
base/src/api/actions/: action.rs  list.rs  mod.rs
base/src/api/agent/: info.rs  mod.rs  shards.rs
base/src/api/introspect/: mod.rs  threads.rs
base/src/config/: actions.rs  api.rs  mod.rs  service.rs  tracer.rs
base/src/store/: interface.rs  mod.rs
base/src/store/backend/: mock.rs  mod.rs
base/src/store/backend/sqlite3/: action.rs  actions.rs  mod.rs  persist.rs
base/src/store/backend/sqlite3/migrations/20190728220141_initialise/: down.sql  up.sql
base/src/testing/: mod.rs
base/src/util/: iron.rs  mod.rs  tracing.rs
ci/: check.sh  travis.sh
ci/travis/: audit-script.sh  build-script.sh  cargo-clean-on-new-rustc.sh  clippy-script.sh  test-install.sh  test-script.sh
devtools/: external-action.py  local-ci.sh  mkcerts.sh  shell-action.py
docs/: DockerHub.md  README.md  SUMMARY.md  book.json  kafka.md  mongodb.md  security.md  zookeeper.md
docs/base/: config.md  install.md
docs/docs/: agents-kafka.md  agents-mongodb.md  agents-zookeeper.md  agents.md  intro-config.md  intro-install.md  intro-security.md  intro.md
docs/docs/assets/: action-states.dot
docs/mappings/: MAPPING.template.md  consul.md  elasticsearch.md  etcd.md  postgresql.md  redis.md
docs/website/: sidebars.json  siteConfig.js
docs/website/core/: Footer.js
docs/website/pages/en/: index.js  versions.js
docs/website/static/css/: custom.css
docs/website/versioned_docs/version-0.2.0/: agents-kafka.md  agents-mongodb.md  agents-zookeeper.md  agents.md  intro-config.md  intro-install.md  intro-security.md  intro.md
docs/website/versioned_docs/version-0.3.0/: agents-kafka.md  intro-install.md
docs/website/versioned_docs/version-0.4.0/: agents-kafka.md  agents-mongodb.md  agents-zookeeper.md  intro-config.md  (+3 more)
docs/website/versioned_sidebars/: version-0.2.0-sidebars.json
kafka/: CHANGELOG.md  Cargo.toml  DockerHub.md  Dockerfile  README.md  agent-kafka.example.yaml
kafka/src/: agent.rs  config.rs  error.rs  errors.rs  lib.rs  main.rs  metrics.rs
kafka/src/agent/: jmx.rs  mod.rs  zk.rs
libs/: golang.md
libs/rust/sdk/: CHANGELOG.md  Cargo.toml  Migrant.toml  build.rs
libs/rust/sdk/src/: context.rs  error.rs  lib.rs  process.rs  traits.rs  versioned.rs
libs/rust/sdk/src/actions/: definition.rs  engine.rs  mod.rs  register.rs  tests.rs  utils.rs
libs/rust/sdk/src/actions/advanced/: and_then.rs  no_op.rs
libs/rust/sdk/src/actions/impls/: debug.rs  external.rs  mod.rs  shell.rs
libs/rust/sdk/src/actions/impls/service/: composed.rs  mod.rs  start.rs  stop.rs  supervisor.rs
libs/rust/sdk/src/actions/impls/test/: mod.rs  ping.rs
libs/rust/sdk/src/api/: index.rs  mod.rs
libs/rust/sdk/src/api/actions/: action.rs  list.rs  mod.rs
libs/rust/sdk/src/api/agent/: info.rs  mod.rs  shards.rs
libs/rust/sdk/src/api/introspect/: mod.rs  threads.rs
libs/rust/sdk/src/config/: actions.rs  api.rs  mod.rs  sentry.rs  service.rs
libs/rust/sdk/src/store/: mod.rs
libs/rust/sdk/src/store/backend/: mock.rs  mod.rs
libs/rust/sdk/src/store/backend/sqlite3/: action.rs  actions.rs  mod.rs
libs/rust/sdk/src/store/backend/sqlite3/migrations/20190728220141_initialise/: down.sql
libs/rust/sdk/src/testing/: mod.rs
mappings/: MAPPING.template.md  consul.md  cratedb.md  elasticsearch.md  etcd.md  kafka.md  mongodb.md  nats.md  postgresql.md  redis.md  zookeeper.md
mongodb/: .gitignore  CHANGELOG.md  Cargo.toml  Changelog.md
mongodb/src/: agent.rs  config.rs  error.rs  errors.rs  lib.rs  main.rs  metrics.rs  rs_status.rs  settings.rs
mongodb/src/interface/: mod.rs  mongodb_32.rs
mongodb/src/version/: common.rs  mod.rs  v3_2.rs
mongodb/src/version/v3_0/: mod.rs  models.rs  replica.rs
mongodb/src/version/v3_2/: common.rs  mod.rs  models.rs  replica.rs  sharded.rs
tools/systemd/: README.md  example-action  example.service  systemd-check  systemd-start
zookeeper/: CHANGELOG.md  Cargo.toml
zookeeper/src/: agent.rs  config.rs  error.rs  errors.rs  lib.rs  main.rs  metrics.rs
zookeeper/src/zk4lw/: conf.rs  mod.rs  srvr.rs
