[workspace]
members = [
    # Agent crates
    "base",
    "mongodb",
    "zookeeper",

    # Official crates with complex dependencies are not in the workspace by default.
    #"kafka",

    # Common crates
    "common/logging",
    "common/models/agent",
    "common/util/failure",
    "common/util/iron",
    "common/util/tracing",
    "common/util/upkeep",
]

# This patch is needed to make openssl (needed by kafka) work with openssl 1.0+
[patch.crates-io]
kafka = { git = 'https://github.com/l4l/kafka-rust', branch = 'update/openssl' }
