[package]
name = "replicante_agent"
version = "0.4.0" # remember to update html_root_url
authors = ["Stefano Pogliani <stefano@spogliani.net>"]
edition = "2018"
build = "build.rs"

description = "Replicante agent framework"
documentation = "https://docs.rs/replicante_agent"
homepage = "https://www.replicante.io/"
repository = "https://github.com/replicante-io/agents"
keywords = ["automation", "datastore", "operations"]
license = "MIT"


[lib]
name = "replicante_agent"
path = "src/lib.rs"


[features]
journald = ["replicante_logging/journald"]


[dependencies]
actix-web = { version = "^1.0", features = ["ssl"] }
clap = "^2.32.0"
failure = "^0.1.5"
failure_derive = "^0.1.5"
humthreads = "^0.1.1"
iron = "^0.6.0"
iron-json-response = "^0.6.0"
lazy_static = "^1.0.1"
openssl = "^0.10"
opentracingrust = "^0.3.3"
prometheus = { version = "^0.7.0", features = ["process"] }
reqwest = "^0.9.1"
router = "^0.6.0"
semver = "^0.9.0"
sentry = "^0.15.4"
serde = "^1.0.25"
serde_derive = "^1.0.25"
serde_json = "^1.0.8"
serde_yaml = "^0.8.0"
slog = "^2.2.3"
slog-scope = "^4.0.1"
slog-stdlog = "^3.0.2"

replicante_logging = { path = "../common/logging", version = "0.1.3" }
replicante_models_agent = { path = "../common/models/agent", version = "0.3.0" }
replicante_util_actixweb = { path = "../common/util/actixweb", version = "0.1.0" }
replicante_util_failure = { path = "../common/util/failure", version = "0.1.2" }
replicante_util_tracing = { path = "../common/util/tracing", version = "0.3.0" }
replicante_util_upkeep = { path = "../common/util/upkeep", version = "0.1.0" }


[build-dependencies]
git2 = "^0.9.0"
