[package]
name = "replicante_agent_mongodb"
version = "0.1.0"
authors = ["Stefano Pogliani <stefano@spogliani.net>"]
build = "../base/build.rs"

description = "Replicante agent for MongoDB"
documentation = "https://docs.rs/replicante_agent_mongodb"
homepage = "https://www.replicante.io/"
repository = "https://github.com/replicante-io/replicante-agents"
readme = "Readme.md"
keywords = ["automation", "datastore", "operations", "mongodb"]
license = "MIT"


[[bin]]
name = "replicante-agent-mongodb-rs"
path = "src/bin/mongodb/rs/agent.rs"


[dependencies]
bson = "^0.10.0"
config = "^0.8.0"
mongodb = "^0.3.7"
prometheus = "^0.4.1"
serde = "^1.0.25"
serde_derive = "^1.0.25"

opentracingrust = "^0.3.1"

replicante_agent = { path = "../base" }
replicante_agent_models = { path = "../common/agent/models" }


[build-dependencies]
git2 = "^0.7.0"
