[package]
name = "replicante_agent_mongodb"
version = "0.2.0"
authors = ["Stefano Pogliani <stefano@spogliani.net>"]
build = "../base/build.rs"

description = "Replicante agent for MongoDB"
documentation = "https://www.replicante.io/docs/"
homepage = "https://www.replicante.io/"
repository = "https://github.com/replicante-io/agents"
readme = "../README.md"
keywords = ["automation", "datastore", "operations", "mongodb"]
license = "MIT"


[[bin]]
name = "replicante-agent-mongodb"
path = "src/main.rs"


[dependencies]
bson = "^0.13.0"  # Limited by MongoDB crate.
clap = "^2.32.0"
error-chain = "^0.12.0"
lazy_static = "^1.0.1"
mongodb = "^0.3.10"
prometheus = "^0.5.0"
semver = "^0.8.0"  # Limited by MongoDB crate.
serde = "^1.0.25"
serde_derive = "^1.0.25"
serde_yaml = "^0.8.0"
slog = "^2.2.3"

opentracingrust = "^0.3.1"

replicante_agent = { path = "../base" }
replicante_agent_models = { path = "../common/agent/models" }
replicante_util_tracing = { path = "../common/util/tracing" }


[build-dependencies]
git2 = "^0.8.0"


[features]
journald = ["replicante_agent/journald"]
