[package]
name = "replicante_agent_kafka"
version = "0.5.0"
authors = ["Stefano Pogliani <stefano@spogliani.net>"]
edition = "2018"
build = "../../libs/rust/build.rs"

description = "Replicante agent for Kafka"
documentation = "https://www.replicante.io/docs/"
homepage = "https://www.replicante.io/"
repository = "https://github.com/replicante-io/agents"
readme = "../../README.md"
keywords = ["automation", "datastore", "operations", "kafka"]
license = "MIT"


[[bin]]
name = "replicante-agent-kafka"
path = "src/main.rs"


[dependencies]
failure = "^0.1.5"
jmx = { version ="^0.2.0", features = ["thread-support"] }
kafka = "^0.8.0"
lazy_static = "^1.0.1"
prometheus = "^0.7.0"
serde = "^1.0.25"
serde_derive = "^1.0.25"
serde_json = "^1.0.0"
serde_yaml = "^0.8.0"
slog = "^2.2.3"
zookeeper = "^0.5.4"

opentracingrust = "^0.3.3"

replicante_agent = { path = "../../libs/rust/sdk" }
replicante_models_agent = { path = "../../libs/rust/common/models/agent" }
replicante_util_failure = { path = "../../libs/rust/common/util/failure" }
replicante_util_tracing = { path = "../../libs/rust/common/util/tracing" }


[build-dependencies]
git2 = "^0.11.0"


[features]
journald = ["replicante_agent/journald"]
