[package]
name = "repliagent_kafka"
version = "0.6.0"
authors = ["Stefano Pogliani <stefano@spogliani.net>"]
edition = "2018"
build = "../../libs/rust/sdk/build.rs"

description = "Replicante agent for Kafka"
documentation = "https://www.replicante.io/docs/"
homepage = "https://www.replicante.io/"
repository = "https://github.com/replicante-io/agents"
readme = "../../README.md"
keywords = ["automation", "datastore", "operations", "kafka"]
license = "MIT"


[[bin]]
name = "repliagent-kafka"
path = "src/main.rs"


[dependencies]
failure = "^0.1"
kafka = "^0.9"
lazy_static = "^1.0"
opentracingrust = "^0.4"
prometheus = "^0.13"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_yaml = "^0.9"
slog = "^2.2"
zookeeper = "^0.6"

replicante_agent = { path = "../../libs/rust/sdk" }
replicante_models_agent = { path = "../../libs/rust/common/models/agent" }
replicante_util_failure = { path = "../../libs/rust/common/util/failure" }
replicante_util_tracing = { path = "../../libs/rust/common/util/tracing" }

[dependencies.jmx]
features = ["thread-support"]
version ="^0.2"


[build-dependencies]
git2 = "^0.15"


[features]
journald = ["replicante_agent/journald"]
