[package]
name = "replicante_agent_mongodb"
version = "0.5.0"
authors = ["Stefano Pogliani <stefano@spogliani.net>"]
edition = "2018"
build = "../../libs/rust/build.rs"

description = "Replicante agent for MongoDB"
documentation = "https://www.replicante.io/docs/"
homepage = "https://www.replicante.io/"
repository = "https://github.com/replicante-io/agents"
readme = "../../README.md"
keywords = ["automation", "datastore", "operations", "mongodb"]
license = "MIT"


[[bin]]
name = "replicante-agent-mongodb"
path = "src/main.rs"


[features]
journald = ["replicante_agent/journald"]


[dependencies]
bson = "^0.14.0" # Limited by MongoDB crate.
failure = "^0.1.5"
lazy_static = "^1.0.1"
mongodb = { version = "^0.10.0", default-features = false, features = ["sync"] }
opentracingrust = "^0.4.0"
prometheus = "^0.8.0"
semver = "^0.9.0"
serde = "^1.0.25"
serde_derive = "^1.0.25"
serde_json = "^1.0.8"
serde_yaml = "^0.8.0"
slog = "^2.2.3"

# We want one async call with mongodb's sync API.
# Untill we fully move to async agents, we need this to block on.
async-std = "^1.5.0"

replicante_agent = { path = "../../libs/rust/sdk" }
replicante_models_agent = { path = "../../libs/rust/common/models/agent" }
replicante_util_failure = { path = "../../libs/rust/common/util/failure" }
replicante_util_tracing = { path = "../../libs/rust/common/util/tracing" }


[build-dependencies]
git2 = "^0.13.0"
replicante_agent = { path = "../../libs/rust/sdk", features = ["with_test_support"] }
