[package]
name = "repliagent_mongodb"
version = "0.6.0"
authors = ["Stefano Pogliani <stefano@spogliani.net>"]
edition = "2018"
build = "../../libs/rust/sdk/build.rs"

description = "Replicante agent for MongoDB"
documentation = "https://www.replicante.io/docs/"
homepage = "https://www.replicante.io/"
repository = "https://github.com/replicante-io/agents"
readme = "../../README.md"
keywords = ["automation", "datastore", "operations", "mongodb"]
license = "MIT"


[[bin]]
name = "repliagent-mongodb"
path = "src/main.rs"


[features]
journald = ["replicante_agent/journald"]


[dependencies]
failure = "^0.1"
lazy_static = "^1.0"
opentracingrust = "^0.4"
prometheus = "^0.13"
semver = "^1.0"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_yaml = "^0.9"
slog = "^2.2"

replicante_agent = { path = "../../libs/rust/sdk" }
replicante_models_agent = { path = "../../libs/rust/common/models/agent" }
replicante_util_failure = { path = "../../libs/rust/common/util/failure" }
replicante_util_tracing = { path = "../../libs/rust/common/util/tracing" }

[dependencies.mongodb]
default-features = false
features = ["sync"]
version = "^2.0"


[build-dependencies]
git2 = "^0.15"


[dev-dependencies]
replicante_agent = { path = "../../libs/rust/sdk", features = ["with_test_support"] }
