[package]
name = "replicante_agent_zookeeper"
version = "0.4.1"
authors = ["Stefano Pogliani <stefano@spogliani.net>"]
edition = "2018"
build = "../../libs/rust/build.rs"

description = "Replicante agent for Zookeeper"
documentation = "https://www.replicante.io/docs/"
homepage = "https://www.replicante.io/"
repository = "https://github.com/replicante-io/agents"
readme = "../../README.md"
keywords = ["automation", "datastore", "operations", "zookeeper"]
license = "MIT"


[[bin]]
name = "replicante-agent-zookeeper"
path = "src/main.rs"


[dependencies]
failure = "^0.1.5"
lazy_static = "^1.0.1"
prometheus = "^0.7.0"
serde = "^1.0.25"
serde_derive = "^1.0.25"
serde_yaml = "^0.8.0"
slog = "^2.2.3"
zk-4lw = "^0.1.0"

opentracingrust = "^0.3.1"

replicante_agent = { path = "../../libs/rust/sdk" }
replicante_models_agent = { path = "../../libs/rust/common/models/agent" }
replicante_util_failure = { path = "../../libs/rust/common/util/failure" }
replicante_util_tracing = { path = "../../libs/rust/common/util/tracing" }


[build-dependencies]
git2 = "^0.11.0"


[features]
journald = ["replicante_agent/journald"]
