[package]
name = "repliagent_zookeeper"
version = "0.6.0"
authors = ["Stefano Pogliani <stefano@spogliani.net>"]
edition = "2018"
build = "../../libs/rust/sdk/build.rs"

description = "Replicante agent for Zookeeper"
documentation = "https://www.replicante.io/docs/"
homepage = "https://www.replicante.io/"
repository = "https://github.com/replicante-io/agents"
readme = "../../README.md"
keywords = ["automation", "datastore", "operations", "zookeeper"]
license = "MIT"


[[bin]]
name = "repliagent-zookeeper"
path = "src/main.rs"


[dependencies]
failure = "^0.1"
lazy_static = "^1.0"
opentracingrust = "^0.4"
prometheus = "^0.13"
serde = { version = "^1.0", features = ["derive"] }
serde_yaml = "^0.9"
slog = "^2.2"
zk-4lw = "^0.1"

replicante_agent = { path = "../../libs/rust/sdk" }
replicante_models_agent = { path = "../../libs/rust/common/models/agent" }
replicante_util_failure = { path = "../../libs/rust/common/util/failure" }
replicante_util_tracing = { path = "../../libs/rust/common/util/tracing" }


[build-dependencies]
git2 = "^0.16"


[features]
journald = ["replicante_agent/journald"]
