[package]
name = "replicante_agent"
version = "0.5.0" # remember to update html_root_url
authors = ["Stefano Pogliani <stefano@spogliani.net>"]
edition = "2018"
build = "../build.rs"

description = "Replicante agent framework"
documentation = "https://docs.rs/replicante_agent"
homepage = "https://www.replicante.io/"
repository = "https://github.com/replicante-io/agents"
readme = "../../../README.md"
keywords = ["automation", "datastore", "operations"]
license = "MIT"


[lib]
name = "replicante_agent"
path = "src/lib.rs"


[features]
journald = ["replicante_logging/journald"]
with_test_support = []


[dependencies]
actix-rt = "^1.0.0"
actix-web = { version = "^2.0.0", features = ["openssl"] }
clap = "^2.32.0"
chrono = "^0.4.7"
failure = "^0.1.5"
failure_derive = "^0.1.5"
futures = "^0.3.4"
humthreads = "^0.2.0"
lazy_static = "^1.0.1"
migrant_lib = { version = "^0.29.0", features = ["d-sqlite"] }
openssl = "^0.10"
opentracingrust = "^0.4.0"
prometheus = { version = "^0.8.0", features = ["process"] }
reqwest = { version = "^0.10.4", features = ["blocking"] }
rusqlite = { version = "^0.23.0", features = ["bundled"]}  # bound by migrant_lib.
semver = "^0.9.0"
sentry = "^0.18.0"
serde = "^1.0.25"
serde_derive = "^1.0.25"
serde_json = "^1.0.8"
serde_yaml = "^0.8.0"
slog = "^2.2.3"
slog-scope = "^4.0.1"
slog-stdlog = "^4.0.0"
uuid = { version = "^0.8", features = ["serde", "v4"] }

replicante_logging = { path = "../common/logging", version = "0.1.3" }
replicante_models_agent = { path = "../common/models/agent", version = "0.3.0" }
replicante_util_actixweb = { path = "../common/util/actixweb", version = "0.2.0" }
replicante_util_failure = { path = "../common/util/failure", version = "0.1.2" }
replicante_util_tracing = { path = "../common/util/tracing", version = "0.4.0" }
replicante_util_upkeep = { path = "../common/util/upkeep", version = "0.2.0" }


[build-dependencies]
git2 = "^0.13.0"
